# boa

./: .gitignore  .merlin  LICENSE  Makefile  NOTICE  boa  boa.opam  demo.out  demo.out.md  dune-project  out.piss  readme.md  test.boa  tests.sh
reports/: Report_Beta.gdoc  beta.md  final_report.md
src/: .merlin  Makefile  ast.cmi  ast.cmo  ast.ml  boa  check.cmi  check.cmo  check.ml  check2.ml  codegen.ml  dune  eval.cmi  eval.cmo  eval.ml  indent.ml  lexer.cmi  lexer.cmo  lexer.ml  lexer.mll  main.cmi  main.cmo  main.ml  parser.cmi  parser.cmo  parser.ml  parser.mli  parser.mly  parser.output  pprint.cmi  pprint.cmo  pprint.ml  test.boa
tests/: indent.boa  string.boa  typecheck.boa
tests/failing/: fail_type_inference.boa
tests/passing/: SKI.boa  access.boa  fact.boa  indent.boa  recursion.boa  test.boa  tset.boa  tuple.boa  type_inference.boa
tests/passing_nocheck/: vector.boa
